--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="main-title-blurb">
             <h2>Sign-up for our newsletter</h2>
-            <p>Get the latest news on how your code is doing right in your inbox!</p>
+            <p><h3>Get the latest news on how your code is doing right in your inbox!</html></p>
         </div>
     </header>
 
@@ -27,7 +27,7 @@
                 <legend>Contact Information</legend>
 
                 <div class="form-field">
-                    <label for="name">Full Name</label>
+                    <label for="name"><h2>Full Name</h2></label>
                     <input type="text" class=" input-field" name="user_name" id="name" placeholder="Required"  required>
                 </div>
     
