--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <legend>Contact Information</legend>
 
                 <div class="form-field">
-                    <label for="name"><h3>Full Name</h3></label>
+                    <label for="name">Full Name</label>
                     <input type="text" class=" input-field" name="user_name" id="name" placeholder="Required"  required>
                 </div>
     
