--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </fieldset>
 
             <fieldset>
-                <legend>Newsletter</legend>
+                <legend class="sub-heading">Newsletter</legend>
                 <p>Please select the newsletters you would like to receive:</p>
 
                 <div class="selection-container">
