--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Online Registration Form</title>
    
     <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz">
 </head>
 
 <body>
