--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="form-field">
                     <label for="county">County</label>
                     <select class="input-field" name="user_county" id="county">
-                        <option>Choose County</option>
+                        <option class="choose-county"> Choose County</option>
                         <option value="Essex">Essex</option>
                         <option value="Sussex">Sussex</option>
                         <option value="Norfolk">Norfolk</option>
