--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
     
                 <div class="form-field">
                     <label for="county">County</label>
-                    <select class="input-field" name="user_county" id="county">
-                        <label placeholder="Choose County"></label>
+                    <select class="input-field" name="user_county" id="county" placeholder="Choose County">
                         <option value="Essex">Essex</option>
                         <option value="Sussex">Sussex</option>
                         <option value="Norfolk">Norfolk</option>
