--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     
                 <div class="form-field">
                     <label for="county">County</label>
-                    <select class="input-field" name="user_county" id="county" placeholder="Choose County">
+                    <select class="input-field" name="user_county" id="county" >
+                        <option>Select County from list below:</option>
                         <option value="Essex">Essex</option>
                         <option value="Sussex">Sussex</option>
                         <option value="Norfolk">Norfolk</option>
