--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
                     <input type="checkbox" name="javascript_news" id="javascript_news"><label for="javascript_news">Javascript News</label>
                 </div>
 
+                <p>Nevsletter format:</p>
+
+                <div class="selection-container">
+                    <input type="checkbox" name="html" id="html"><label for="html">HTML</label>
+                </div>
+
+                <div class="selection-container">
+                    <input type="checkbox" name="plain_text" id="plain-text"><label for="plain-text">Plain text</label>
+                </div>
+
             
                 <label for="other">Other topics you'd like to hear about</label>
                 <textarea name="other" id="other"></textarea>
@@ -98,6 +108,6 @@
 
             <button type="submit">Sign Up</button>
         </form>
-        <p>Copyright The Code Review</p>
+        <p>Copyright: The Code Review</p>
     </div>
 </body>
