--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
 
             <button type="submit">Sign Up</button>
         </form>
+    <footer></footer>
         <p>Copyright: The Code Review</p>
+    </footer>
     </div>
 </body>
