--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="main-title-blurb">
             <h2>Sign-up for our newsletter</h2>
-            <p><h3>Get the latest news on how your code is doing right in your inbox!</html></p>
+            <h3>Get the latest news on how your code is doing right in your inbox!</h3>
         </div>
     </header>
 
@@ -26,6 +26,7 @@
         <form action="index.html" method="post">
             <fieldset>
                 <legend>Contact Information</legend>
+            </div>
 
                 <div class="form-field">
                     <label for="name">Full Name</label>
