--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <p>Nevsletter format:</p>
 
                 <div class="selection-container">
-                    <input type="radio" name="html" id="html"><label value="html"><label for="html">HTML</label>
+                    <input type="radio" name="html" id="html" value="html"><label for="html">HTML</label>
                 </div>
 
                 <div class="selection-container">
