--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <option value="Norfolk">Norfolk</option>
                         <option value="Heaven">Heaven</option>
                         <option value="Hell">Hell</option>
-                        <otion value="Nirvana">Nirvana</otion>
+                        <option value="Nirvana">Nirvana</option>
                         <option value="Neverland">Neverland</option>
                         <option value="Narnia">Narnia</option>
                         <option value="Hogwarts">Hogwarts</option>
@@ -73,8 +73,9 @@
                     <label for="postcode">Post Code</label>
                     <input type="text" name="user_post_code" id="postcode" class=" input-field" placeholder="Post Code" required>
                 </div>
-
             </fieldset>
+
+        
 
             <fieldset>
                 <legend class="sub-heading">Newsletter</legend>
@@ -107,9 +108,7 @@
             </fieldset>
 
             <button type="submit">Sign Up</button>
-        </form>
-    <footer></footer>
+    <footer>
         <p>Copyright: The Code Review</p>
     </footer>
-    </div>
 </body>
