--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         <form action="index.html" method="post">
             <fieldset>
                 <legend>Contact Information</legend>
+            </fieldset>
             </div>
 
+            <fieldset>
                 <div class="form-field">
                     <label for="name">Full Name</label>
                     <input type="text" class=" input-field" name="user_name" id="name" placeholder="Required"  required>
@@ -80,6 +82,7 @@
             <fieldset>
                 <legend class="sub-heading">Newsletter</legend>
                 <p>Please select the newsletters you would like to receive:</p>
+            </fieldset>
 
                 <div class="selection-container">
                     <input type="checkbox" name="html_news" id="html_news"><label for="html_news">HTML News</label>
