--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <form action="index.html" method="post">
             <fieldset>
                 <legend>Contact Information</legend>
+            </div>
            
                 <div class="form-field">
                     <label for="name">Full Name</label>
