--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         </div>
     </header>
 
-    <div class="main-form-container">
-        <form action="index.html" method="post">
+
+        <form class="main-form-container" action="index.html" method="post">
             <fieldset>
                 <legend>Contact Information</legend>
-            </div>
+            
            
                 <div class="form-field">
                     <label for="name">Full Name</label>
