--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@
 
                 <label for="other">Other topics you'd like to hear about</label>
                 <textarea name="other" id="other"></textarea>
-            </fieldset>
+           
 
             <button type="submit">Sign Up</button>
+            </form>
     <footer>
         <p>Copyright: The Code Review</p>
     </footer>
