--- a/index.html
+++ b/index.html
@@ -97,12 +97,13 @@
                 <p>Nevsletter format:</p>
 
                 <div class="selection-container">
-                    <input type="radio" name="html" id="html" value="html"><label for="html">HTML</label>
+                    <input type="radio" name="html" id="html"><label for="html">HTML</label>
                 </div>
 
                 <div class="selection-container">
-                    <input type="radio" name="plain_text" id="plain-text" value="plain_text"><label for="plain-text">Plain text</label>
+                    <input type="radio" name="plain_text" id="plain-text"><label for="plain-text">Plain text</label>
                 </div>
+
 
                 <label for="other">Other topics you'd like to hear about</label>
                 <textarea name="other" id="other"></textarea>
