--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
                 <p>Nevsletter format:</p>
 
                 <div class="selection-container">
-                    <input type="radio" name="html" id="html"><label for="html">HTML</label>
+                    <input type="radio" name="select_one" id="html"><label for="html">HTML</label>
                 </div>
 
                 <div class="selection-container">
-                    <input type="radio" name="plain_text" id="plain-text"><label for="plain-text">Plain text</label>
+                    <input type="radio" name="select_one" id="plain-text"><label for="plain-text">Plain text</label>
                 </div>
 
 
